<resources>
    <string name="sample_name">Sample Name</string>
    <string name="sample_id">Sample id</string>
    <string name="sample_location">Sample Location</string>
    <string name="error">Error</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="ok">OK</string>
    <string name="cancel">Cancel</string>
    <string name="na">N/A</string>
    <string name="app_name">CBR</string>
    <string name="sign_in">SIGN IN</string>
    <string name="user_name">User Name</string>
    <string name="password">Password</string>
    <string name="terms_of_service_and_privacy_policy">Terms of Service and Privacy Policy</string>
    <string name="continue_text">continue</string>
    <string name="missing_fields">Missing fields</string>
    <string name="agnes_kenyi">Agnes Kenyi</string>
    <string name="bidibidi_zone_3">BidiBidi, Zone 3</string>
    <string name="gender_clientpage">Gender: %1$s</string>
    <string name="age_clientpage">Age: %1$s</string>
    <string name="disability_clientpage">Disabilities: %1$s</string>
    <string name="disabilities">Disabilities</string>
    <string name="basic_information">Basic information</string>
    <string name="social_status">Social Status</string>
    <string name="visits">Visits</string>
    <string name="visits_list">Visit on: %1$s</string>
    <string name="referrals_list">Referral for client id: %1$d</string>
    <string name="visit_details">Visit details</string>
    <string name="client_id">Client id</string>
    <string name="visit_id">Visit id</string>
    <string name="visit_purpose">Visit purpose</string>
    <string name="visit_date">Visit date</string>
    <string name="worker_name">Worker name</string>
    <string name="service_requirements_question">What service does the client require?</string>
    <string name="patient_conditions_question">What condition does the client have?</string>
    <string name="other_option">If other, please describe:</string>
    <string name="prosthetic_question">Is the injury below or above the knee?</string>
    <string name="orthotic_question">Is the injury below or above the elbow?</string>
    <string name="above_knee_question">Above the knee</string>
    <string name="below_knee_question">Below the knee</string>
    <string name="above_elbow_question">Above the elbow</string>
    <string name="below_elbow_question">Below the elbow</string>
    <string name="wheelchair_expertise_question">Is the user a basic or intermediate user?</string>
    <string name="basic_user">Basic user</string>
    <string name="intermediate_user">Intermediate user</string>
    <string name="hip_width_question">What is the client\'s in inches?</string>
    <string name="existing_wheelchair_question">Do they have an existing wheelchair?</string>
    <string name="wheelchair_repair_question">Can the existing wheelchair be repaired?</string>
    <string name="wheelchair_centre">*If yes, please bring the wheelchair to the centre</string>
    <string name="outcome_question">Is this referral outstanding?</string>
    <string name="post_referral">Post new referral</string>
    <string name="viewpager_page_number">Page %1$d of %2$d</string>
    <string name="basic_info">Basic Info</string>
    <string name="location_info">Location Info</string>
    <string name="caregiver_info">Caregiver Info</string>
    <string name="photo">Photo</string>
    <string name="interview_consent">To create a new client, the client must first consent to an interview.</string>
    <string name="male">Male</string>
    <string name="female">Female</string>
    <string name="last_name">Last name</string>
    <string name="village_number">Village number</string>
    <string name="consent_to_interview">Consent to interview?</string>
    <string name="id_number">ID Number:</string>
    <string name="gps_location">GPS location</string>
    <string name="date">Date</string>
    <string name="first_name">First name</string>
    <string name="age">Age</string>
    <string name="contact_number">Contact number</string>
    <string name="caregiver_present_for_interview">Caregiver present for interview?</string>
    <string name="caregiver_first_name">Caregiver first name</string>
    <string name="caregiver_last_name">Caregiver last name</string>
    <string name="caregiver_contact_number">Caregiver contact number</string>
    <string name="record_client">Record Client</string>
    <string name="don_t_know">Don\'t know</string>
    <string name="other">Other</string>
    <string name="hearing_impairment">Hearing impairment</string>
    <string name="visual_impairment">Visual impairment</string>
    <string name="hydrocephalus">Hydrocephalus</string>
    <string name="spina_bifida">Spina bifida</string>
    <string name="cerebral_palsy">Cerebral palsy</string>
    <string name="amputee">Amputee</string>
    <string name="polio">Polio</string>
    <string name="spinal_cord_injury">Spinal cord injury</string>
    <string name="please_describe_what_they_require">Please describe what they require</string>
    <string name="set_individual_goal">Set individual goal</string>
    <string name="individual_goal">Individual goal</string>
    <string name="location">Location</string>
    <string name="type_of_disability">Type of Disability</string>
    <string name="site_location">Site location</string>
    <string name="please_rate_how_you_consider_the_client_s_health_to_be">Please rate how you consider the client\'s health to be</string>
    <string name="please_rate_how_you_consider_the_client_s_social_status_to_be">Please rate how you consider the client\'s social status to be</string>
    <string name="please_rate_how_you_consider_the_client_s_education_status_to_be">Please rate how you consider the client\'s education status to be</string>
    <string name="gender">Gender</string>
    <string name="purpose_of_visit">1. Purpose of visit*:</string>
    <string name="cbr">CBR</string>
    <string name="disability_centre_referral">Disability centre referral</string>
    <string name="disability_centre_referral_follow_up">Disability centre referral follow up</string>
    <string name="new_visit_question_2">2. Select Aspect* (check all that apply):</string>
    <string name="health">Health</string>
    <string name="education">Education</string>
    <string name="social">Social</string>
    <string name="date_of_visit">3. Date of visit*:</string>
    <string name="name_of_cbr_worker">4. Name of CBR worker*:</string>
    <string name="yyyy_mm_dd">yyyy-MM-dd</string>
    <string name="first_and_last_name">First and last name</string>
    <string name="location_of_visit">5. Location of visit*:</string>
    <string name="new_vist_location">6. Location*:</string>
    <string name="village_no">7. Village No.*:</string>
    <string name="for_health_what_was_provided">8. For health what was provided?* (check all that apply):</string>
    <string name="wheelchair">Wheelchair</string>
    <string name="description_max_100_characters">Description* (Max 100 characters)</string>
    <string name="description_max_100_characters_optional">Description (Max 100 characters)</string>
    <string name="physiotherapy">Physiotherapy</string>
    <string name="prosthetic">Prosthetic</string>
    <string name="orthotic">Orthotic</string>
    <string name="wheelchair_repairs">Wheelchair repairs</string>
    <string name="referral_to_health_centre">Referral to health centre</string>
    <string name="advice">Advice</string>
    <string name="advocacy">Advocacy</string>
    <string name="encouragement">Encouragement</string>
    <string name="goal_met_9">9. Goal met?*:</string>
    <string name="goal_met_12">12. Goal met?*:</string>
    <string name="goal_met_15">15. Goal met?*:</string>
    <string name="cancelled">Cancelled</string>
    <string name="ongoing">Ongoing</string>
    <string name="concluded">Concluded</string>
    <string name="if_concluded_what_was_the_outcome_10">10. If concluded, what was the outcome:</string>
    <string name="if_concluded_what_was_the_outcome_13">13. If concluded, what was the outcome:</string>
    <string name="if_concluded_what_was_the_outcome_16">16. If concluded, what was the outcome:</string>
    <string name="for_education_what_was_provided">11. For education what was provided?* (check all that apply):</string>
    <string name="referral_to_other_org">Referral to other org.</string>
    <string name="zone_location">Zone location</string>
    <string name="for_social_what_was_provided">14. For social what was provided?* (check all that apply):</string>
    <string name="next">Next</string>
    <string name="back">Back</string>
    <string name="record">Record</string>
    <string name="required_field">*: required field.</string>
    <string name="please_fill_in">Please fill in number(s): </string>
    <string name="e_g_5">E.g., 5</string>
    <string name="question_2_not_filled">Question 2 not filled.</string>
    <string name="Login">Login</string>
    <string name="new_visit">New Visit</string>
    <string name="patient_list">Patient List</string>
    <string name="initial_goal">Initial goal:</string>
    <string name="login_failed">Login Failed</string>
    <string name="register_failed">Register Failed</string>
    <string name="database_call_fail">Response to the database failed.</string>
    <string name="database_on_response_fail_health_goal">Response fail to get client health goal.</string>
    <string name="initial_goal_not_found">Initial goal not found</string>
    <string name="search">Search</string>
    <string name="phone_number">Phone number</string>
    <string name="confirm_password">Confirm password</string>
    <string name="select_one_or_more_zones">Select one or more zones</string>
    <string name="bidibidi_zone_1">Bidibidi Zone 1</string>
    <string name="bidibidi_zone_2">Bidibidi Zone 2</string>
    <string name="bidibidi_zone_4">Bidibidi Zone 4</string>
    <string name="bidibidi_zone_5">Bidibidi Zone 5</string>
    <string name="palorinya_basecamp">Palorinya Basecamp</string>
    <string name="palorinya_zone_1">Palorinya Zone 1</string>
    <string name="palorinya_zone_2">Palorinya Zone 2</string>
    <string name="palorinya_zone_3">Palorinya Zone 3</string>
    <string name="select_type_of_user">Select type of user</string>
    <string name="admin">Admin</string>
    <string name="cbr_worker">CBR worker</string>
    <string name="clinician">Clinician</string>
    <string name="photo_preview">Photo preview</string>
    <string name="client_photo">Client photo</string>
    <string name="you_must_allow_this_app_to_use_your_camera_to_record_a_photo">You must allow this app to use your camera to record a photo</string>
    <string name="new_visit_title">New Visit</string>
    <string-array name="zone_locations_array">
        <item>BidiBidi Zone 1</item>
        <item>BidiBidi Zone 2</item>
        <item>BidiBidi Zone 3</item>
        <item>BidiBidi Zone 4</item>
        <item>BidiBidi Zone 5</item>
        <item>Palorinya Basecamp</item>
        <item>Palorinya Zone 1</item>
        <item>Palorinya Zone 2</item>
        <item>Palorinya Zone 3</item>
    </string-array>
    <string-array name="client_ratings_array">
        <item>Critical risk</item>
        <item>High risk</item>
        <item>Medium risk</item>
        <item>Low risk</item>
    </string-array>
    <string name="risk_level">Risk Level</string>
    <string name="risk_levels_message">\Education %1$s, Health %2$s, Social Status %3$s\</string>
    <string name="last_visit_message">\Last Visit: %1$s\</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="home">Home</string>
    <string name="list">List</string>
    <string name="dashboard">Dashboard</string>
    <string name="dummy_data_last_vist2">Last Visit: February 10, 2021</string>
    <string name="name">Name</string>
    <string name="map">Map</string>
    <string name="chat">Chat</string>
</resources>