<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/bottomMenuHome"
        android:title="@string/home"
        android:icon="@drawable/ic_baseline_home_24"/>

    <item
        android:id="@+id/bottomMenuDashboard"
        android:title="@string/dashboard"
        android:icon="@drawable/ic_baseline_dashboard_24"/>

    <item
        android:id="@+id/bottomMenuClientList"
        android:title="@string/list"
        android:icon="@drawable/ic_baseline_list_24"/>

    <item
        android:id="@+id/bottomMenuChat"
        android:title="@string/chat"
        android:icon="@drawable/ic_baseline_chat_24"/>

    <item
        android:id="@+id/bottomMenuMap"
        android:title="@string/map"
        android:icon="@drawable/ic_baseline_map_24"/>

</menu>