<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="?android:windowBackground"
    tools:context=".fragments.newvisit.VisitThirdQuestionSetFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <TextView
            android:id="@+id/newVisit_Q11TextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            android:text="@string/for_education_what_was_provided"
            android:textColor="#000000" />

        <CheckBox
            android:id="@+id/newVisit_educationAdviceCheckBox"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:text="@string/advice" />

        <EditText
            android:id="@+id/newVisit_educationAdviceEditText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:ems="18"
            android:hint="@string/description_max_100_characters"
            android:maxLength="100"
            android:visibility="gone"
            android:autofillHints="no"
            android:inputType="text" />

        <CheckBox
            android:id="@+id/newVisit_educationAdvocacyCheckBox"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:text="@string/advocacy" />

        <EditText
            android:id="@+id/newVisit_educationAdvocacyEditText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:ems="18"
            android:hint="@string/description_max_100_characters"
            android:maxLength="100"
            android:visibility="gone"
            android:autofillHints="no"
            android:inputType="text" />

        <CheckBox
            android:id="@+id/newVisit_educationRefcheckBox"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:text="@string/referral_to_other_org" />

        <EditText
            android:id="@+id/newVisit_educationRefEditText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:ems="18"
            android:hint="@string/description_max_100_characters"
            android:maxLength="100"
            android:visibility="gone"
            android:autofillHints="no"
            android:inputType="text" />

        <CheckBox
            android:id="@+id/newVisit_educationEncouragementCheckBox"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:text="@string/encouragement" />

        <EditText
            android:id="@+id/newVisit_educationEncouragementEditText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:autofillHints="no"
            android:ems="18"
            android:hint="@string/description_max_100_characters"
            android:maxLength="100"
            android:visibility="gone"
            android:inputType="text" />

        <TextView
            android:id="@+id/newVisit_Q12TextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:text="@string/goal_met_12"
            android:textColor="#000000" />

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:layout_marginStart="8dp"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/newVisit_educationGoalTextView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/initial_goal"
                android:textColor="#000000" />

            <TextView
                android:id="@+id/newVisit_educationInitialGoalBoxTextView"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_weight="1"
                android:textColor="#000000"/>
        </LinearLayout>

        <RadioGroup
            android:id="@+id/newVisit_educationGoalStatusRadioGroup"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp">

            <RadioButton
                android:id="@+id/newVisit_educationCancelledRadioButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/cancelled" />

            <RadioButton
                android:id="@+id/newVisit_educationOngoingRadioButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/ongoing" />

            <RadioButton
                android:id="@+id/newVisit_educationConcludedRadioButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/concluded" />

        </RadioGroup>

        <TextView
            android:id="@+id/newVisit_Q13TextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:text="@string/if_concluded_what_was_the_outcome_13"
            android:textColor="#000000"
            android:visibility="gone" />

        <EditText
            android:id="@+id/newVisit_EducationOutcomeEditText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:maxLength="100"
            android:ems="18"
            android:hint="@string/description_max_100_characters_optional"
            android:visibility="gone"
            android:autofillHints="no"
            android:inputType="text" />
    </LinearLayout>
</androidx.core.widget.NestedScrollView>