<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="?android:windowBackground"
    tools:context=".fragments.newvisit.VisitFourthQuestionSetFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="16dp">

        <TextView
            android:id="@+id/newVisit_Q14TextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            android:text="@string/for_social_what_was_provided"
            android:textColor="#000000"
            android:layout_marginLeft="8dp"
            android:textSize="14sp"/>

        <CheckBox
            android:id="@+id/newVisit_socialAdviceCheckBox"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:text="@string/advice"
            android:layout_marginLeft="16dp" />

        <EditText
            android:id="@+id/newVisit_socialAdviceEditText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:ems="18"
            android:hint="@string/description_max_100_characters"
            android:maxLength="100"
            android:visibility="gone"
            android:autofillHints="no"
            android:inputType="text"
            android:layout_marginLeft="8dp" />

        <CheckBox
            android:id="@+id/newVisit_socialAdvocacyCheckBox"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:text="@string/advocacy"
            android:layout_marginLeft="16dp" />

        <EditText
            android:id="@+id/newVisit_socialAdvocacyEditText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:ems="18"
            android:hint="@string/description_max_100_characters"
            android:maxLength="100"
            android:visibility="gone"
            android:autofillHints="no"
            android:inputType="text"
            android:layout_marginLeft="8dp" />

        <CheckBox
            android:id="@+id/newVisit_socialRefCheckBox"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:text="@string/referral_to_other_org"
            android:layout_marginLeft="16dp" />

        <EditText
            android:id="@+id/newVisit_socialRefEditText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:ems="18"
            android:hint="@string/description_max_100_characters"
            android:maxLength="100"
            android:visibility="gone"
            android:autofillHints="no"
            android:inputType="text"
            android:layout_marginLeft="8dp" />

        <CheckBox
            android:id="@+id/newVisit_socialEncouragementCheckBox"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:text="@string/encouragement"
            android:layout_marginLeft="16dp" />

        <EditText
            android:id="@+id/newVisit_socialEncouragementEditText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:ems="18"
            android:hint="@string/description_max_100_characters"
            android:maxLength="100"
            android:visibility="gone"
            android:autofillHints="no"
            android:inputType="text"
            android:layout_marginLeft="8dp" />

        <TextView
            android:id="@+id/newVisit_Q15TextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:text="@string/goal_met_15"
            android:textColor="#000000"
            android:layout_marginLeft="8dp"
            android:textSize="14sp"/>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:layout_marginStart="8dp"
            android:orientation="horizontal"
            android:layout_marginLeft="8dp">

            <TextView
                android:id="@+id/newVisit_socialGoalTextView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/initial_goal"
                android:textColor="#000000"
                android:textSize="14sp"/>

            <TextView
                android:id="@+id/newVisit_socialInitialGoalBoxTextView"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_weight="1"
                android:textColor="#000000"
                android:layout_marginLeft="8dp" />
        </LinearLayout>

        <RadioGroup
            android:id="@+id/newVisit_socialGoalStatusRadioGroup"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginLeft="16dp">

            <RadioButton
                android:id="@+id/newVisit_socialCancelledRadioButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/cancelled" />

            <RadioButton
                android:id="@+id/newVisit_socialOngoingRadioButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/ongoing" />

            <RadioButton
                android:id="@+id/newVisit_socialConcludedRadioButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/concluded" />

        </RadioGroup>

        <TextView
            android:id="@+id/newVisit_Q16TextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:text="@string/if_concluded_what_was_the_outcome_16"
            android:textColor="#000000"
            android:visibility="visible"
            android:layout_marginLeft="8dp" />

        <EditText
            android:id="@+id/newVisit_socialOutcomeEditText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:autofillHints="no"
            android:ems="18"
            android:hint="@string/description_max_100_characters_optional"
            android:inputType="text"
            android:maxLength="100"
            android:visibility="visible"
            android:layout_marginLeft="8dp" />
    </LinearLayout>

</androidx.core.widget.NestedScrollView>