<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:background="@drawable/white_border"
    android:padding="5dp">

    <RelativeLayout
        android:layout_width="320dp"
        android:layout_height="wrap_content">

        <ImageView
            android:id="@+id/info_item_client_photo"
            android:layout_width="72dp"
            android:layout_height="72dp"
            android:layout_alignParentStart="true"
            android:layout_alignParentTop="true"
            android:layout_marginStart="0dp"
            android:layout_marginTop="0dp"
            app:srcCompat="@drawable/discussion_sample_avatar_1" />

        <TextView
            android:id="@+id/info_textView_clientLastVisit"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignBottom="@+id/info_item_client_photo"
            android:layout_marginStart="5dp"
            android:layout_marginBottom="5dp"
            android:layout_toEndOf="@+id/info_item_client_photo"
            android:text="@string/dummy_data_last_vist2" />

        <TextView
            android:id="@+id/info_textView_clientID"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/info_textView_clientName"
            android:layout_marginStart="5dp"
            android:layout_marginBottom="5dp"
            android:layout_toEndOf="@+id/info_item_client_photo"
            android:text="@string/id_number" />

        <TextView
            android:id="@+id/info_textView_clientName"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="5dp"
            android:layout_toEndOf="@+id/info_item_client_photo"
            android:text="@string/name"
            android:layout_marginBottom="5dp"/>

        <ImageView
            android:id="@+id/info_item_clientConsent"
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:layout_alignParentTop="true"
            android:layout_alignParentEnd="true"
            android:layout_marginTop="34dp"
            android:layout_marginEnd="1dp"
            app:srcCompat="@drawable/check" />


    </RelativeLayout>
</RelativeLayout>
